# framework

./: LICENSE  README.md  pyproject.toml
src/TotalPy/: __init__.py  builders.py  edit.py  http.py  jsonschema.py  mail.py  nosql.py  path.py  querybuilder.py  routing.py  tangular.py  utils.py  viewengine.py
src/TotalPy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/web/: config  index.py  test.py
tests/web/controllers/: default.py
tests/web/definitions/: auth.py
tests/web/plugins/products/: index.py
