[project]
name = "TotalPy"
version = "0.0.1"
authors = [
  { name="Peter Sirka", email="petersirka@gmail.com" },
]
license = {file = "LICENSE"}
description = "Full featured web framework"
readme = "README.md"
keywords = ["web", "framework", "REST", "api", "mvc"]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://www.totaly.com"
"Bug Tracker" = "https://github.com/totalpy/framework/issues"
"Source" = "https://github.com/totalpy/framework/"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"